# server/config.go
@@ -52,6 +52,7 @@ type Config interface {
 	GetGoogleAuth() *GoogleAuthConfig
 	GetSatori() *SatoriConfig
 	GetStorage() *StorageConfig
+	GetMFA() *MFAConfig
 	GetLimit() int
 	GetCluster() *PeerConfig
 
@@ -414,6 +415,10 @@ func ValidateConfig(logger *zap.Logger, c Config) map[string]string {
 	c.GetSatori().Validate(logger)
 	c.GetCluster().Validate(logger)
 
+	if k := c.GetMFA().StorageEncryptionKey; k != "" && len(k) != 32 {
+		logger.Fatal("MFA encryption key has to be 32 bits long")
+	}
+
 	return configWarnings
 }
 
@@ -474,6 +479,7 @@ type config struct {
 	GoogleAuth       *GoogleAuthConfig  `yaml:"google_auth" json:"google_auth" usage:"Google's auth settings."`
 	Satori           *SatoriConfig      `yaml:"satori" json:"satori" usage:"Satori integration settings."`
 	Storage          *StorageConfig     `yaml:"storage" json:"storage" usage:"Storage settings."`
+	MFA              *MFAConfig         `yaml:"mfa" json:"mfa" usage:"MFA settings."`
 	Limit            int                `json:"-"` // Only used for migrate command.
 	Cluster          *PeerConfig        `yaml:"cluster" json:"cluster" usage:"Cluster settings."`
 }
@@ -504,6 +510,7 @@ func NewConfig(logger *zap.Logger) *config {
 		GoogleAuth:       NewGoogleAuthConfig(),
 		Satori:           NewSatoriConfig(),
 		Storage:          NewStorageConfig(),
+		MFA:              NewMFAConfig(),
 		Limit:            -1,
 		Cluster:          NewPeerConfig(),
 	}
@@ -647,6 +654,10 @@ func (c *config) GetSatori() *SatoriConfig {
 
 func (c *config) GetStorage() *StorageConfig {
 	return c.Storage
+}
+
+func (c *config) GetMFA() *MFAConfig {
+	return c.MFA
 }
 
 func (c *config) GetLimit() int {
@@ -967,16 +978,17 @@ func NewTrackerConfig() *TrackerConfig {
 
 // ConsoleConfig is configuration relevant to the embedded console.
 type ConsoleConfig struct {
-	Port                int    `yaml:"port" json:"port" usage:"The port for accepting connections for the embedded console, listening on all interfaces."`
-	Address             string `yaml:"address" json:"address" usage:"The IP address of the interface to listen for console traffic on. Default listen on all available addresses/interfaces."`
-	MaxMessageSizeBytes int64  `yaml:"max_message_size_bytes" json:"max_message_size_bytes" usage:"Maximum amount of data in bytes allowed to be read from the client socket per message."`
-	ReadTimeoutMs       int    `yaml:"read_timeout_ms" json:"read_timeout_ms" usage:"Maximum duration in milliseconds for reading the entire request."`
-	WriteTimeoutMs      int    `yaml:"write_timeout_ms" json:"write_timeout_ms" usage:"Maximum duration in milliseconds before timing out writes of the response."`
-	IdleTimeoutMs       int    `yaml:"idle_timeout_ms" json:"idle_timeout_ms" usage:"Maximum amount of time in milliseconds to wait for the next request when keep-alives are enabled."`
-	Username            string `yaml:"username" json:"username" usage:"Username for the embedded console. Default username is 'admin'."`
-	Password            string `yaml:"password" json:"password" usage:"Password for the embedded console. Default password is 'password'."`
-	TokenExpirySec      int64  `yaml:"token_expiry_sec" json:"token_expiry_sec" usage:"Token expiry in seconds. Default 86400."`
-	SigningKey          string `yaml:"signing_key" json:"signing_key" usage:"Key used to sign console session tokens."`
+	Port                int        `yaml:"port" json:"port" usage:"The port for accepting connections for the embedded console, listening on all interfaces."`
+	Address             string     `yaml:"address" json:"address" usage:"The IP address of the interface to listen for console traffic on. Default listen on all available addresses/interfaces."`
+	MaxMessageSizeBytes int64      `yaml:"max_message_size_bytes" json:"max_message_size_bytes" usage:"Maximum amount of data in bytes allowed to be read from the client socket per message."`
+	ReadTimeoutMs       int        `yaml:"read_timeout_ms" json:"read_timeout_ms" usage:"Maximum duration in milliseconds for reading the entire request."`
+	WriteTimeoutMs      int        `yaml:"write_timeout_ms" json:"write_timeout_ms" usage:"Maximum duration in milliseconds before timing out writes of the response."`
+	IdleTimeoutMs       int        `yaml:"idle_timeout_ms" json:"idle_timeout_ms" usage:"Maximum amount of time in milliseconds to wait for the next request when keep-alives are enabled."`
+	Username            string     `yaml:"username" json:"username" usage:"Username for the embedded console. Default username is 'admin'."`
+	Password            string     `yaml:"password" json:"password" usage:"Password for the embedded console. Default password is 'password'."`
+	TokenExpirySec      int64      `yaml:"token_expiry_sec" json:"token_expiry_sec" usage:"Token expiry in seconds. Default 86400."`
+	SigningKey          string     `yaml:"signing_key" json:"signing_key" usage:"Key used to sign console session tokens."`
+	MFA                 *MFAConfig `yaml:"mfa" json:"mfa" usage:"MFA settings."`
 }
 
 func NewConsoleConfig() *ConsoleConfig {
@@ -990,6 +1002,7 @@ func NewConsoleConfig() *ConsoleConfig {
 		Password:            "password",
 		TokenExpirySec:      86400,
 		SigningKey:          "defaultsigningkey",
+		MFA:                 NewMFAConfig(),
 	}
 }
 
@@ -1124,4 +1137,16 @@ type StorageConfig struct {
 
 func NewStorageConfig() *StorageConfig {
 	return &StorageConfig{}
+}
+
+type MFAConfig struct {
+	StorageEncryptionKey string `yaml:"storage_encryption_key" json:"storage_encryption_key" usage:"The encryption key to be used when persisting MFA related data. Has to be 32 bytes long."`
+	AdminAccountOn       bool   `yaml:"admin_account_enabled" json:"admin_account_enabled" usage:"Require MFA for the Console Admin account."`
+}
+
+func NewMFAConfig() *MFAConfig {
+	return &MFAConfig{
+		StorageEncryptionKey: "the-key-has-to-be-32-bytes-long!", // Has to be 32 bit long.
+		AdminAccountOn:       false,
+	}
 }
